Refactored AllowedUILocales (isAllowedUILocale to isProhibitedUILocale)

Refactored optional attribute 'isAllowedUILocale' to
'isProhibitedUILocale' (default=false). Also set the attribute in c++
and pass it through LanguageSettingsPrivateAPI instead of accessing the
pref in the UI code.

Bug: 695042
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: Id904a54e4798bb9a951dd65f8748bd40867e4425
Reviewed-on: https://chromium-review.googlesource.com/1111710
Reviewed-by: Steven Bennetts <stevenjb@chromium.org>
Commit-Queue: Alexander Hendrich <hendrich@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569979}
Former-commit-id: 0f3657116dbe4439acf2fa596e217eb640792329