chrome/browser/extensions/api/language_settings_private/language_settings_private_api.cc
@@ -78,6 +78,16 @@ std::unordered_set<std::string> GetIMEsFromPref(PrefService* prefs,
                                          enabled_imes.end());
 }
 
+// Returns the set of allowed UI locales.
+std::unordered_set<std::string> GetAllowedUILocales(PrefService* prefs) {
+  std::unordered_set<std::string> allowed_ui_locales;
+  const base::Value::ListStorage& pref_value =
+      prefs->GetList(prefs::kAllowedUILocales)->GetList();
+  for (const base::Value& locale_value : pref_value)
+    allowed_ui_locales.insert(locale_value.GetString());
+  return allowed_ui_locales;
+}
+
 // Sorts the input methods by the order of their associated languages. For
 // example, if the enabled language order is:
 //  - French
@@ -191,6 +201,10 @@ LanguageSettingsPrivateGetLanguageListFunction::Run() {
 
   // Build the language list.
   std::unique_ptr<base::ListValue> language_list(new base::ListValue);
+#if defined(OS_CHROMEOS)
+  const std::unordered_set<std::string> allowed_ui_locales(
+      GetAllowedUILocales(chrome_details_.GetProfile()->GetPrefs()));
+#endif  // defined(OS_CHROMEOS)
   for (const auto& entry : languages) {
     language_settings_private::Language language;
 
@@ -213,6 +227,12 @@ LanguageSettingsPrivateGetLanguageListFunction::Run() {
     } else if (base::ContainsKey(locale_set, entry.code)) {
       language.supports_ui.reset(new bool(true));
     }
+#if defined(OS_CHROMEOS)
+    if (!allowed_ui_locales.empty() &&
+        allowed_ui_locales.count(language.code) == 0) {
+      language.is_prohibited_ui_locale.reset(new bool(true));
+    }
+#endif  // defined(OS_CHROMEOS)
 
     language_list->Append(language.ToValue());
   }
