chrome/browser/resources/settings/languages_page/languages.js
@@ -376,22 +376,6 @@ Polymer({
   },
 
   /**
-   * @private
-   * @param {string} languageCode language code
-   * @return {boolean} True if the locale is in the list of allowed UI locales
-   *      ('AllowedUILocales' policy) or if the policy is not set (empty list).
-   * @private
-   */
-  isAllowedUILocale_: function(languageCode) {
-    if (!cr.isChromeOS)
-      return true;
-
-    const pref = /** @type {!chrome.settingsPrivate.PrefObject} */ (
-        this.get('intl.allowed_ui_locales', this.prefs));
-    return (pref.value.length == 0 || pref.value.indexOf(languageCode) != -1);
-  },
-
-  /**
    * Constructs the languages model.
    * @param {!Array<!chrome.languageSettingsPrivate.Language>}
    *     supportedLanguages
@@ -412,7 +396,7 @@ Polymer({
       language.supportsUI = !!language.supportsUI;
       language.supportsTranslate = !!language.supportsTranslate;
       language.supportsSpellcheck = !!language.supportsSpellcheck;
-      language.isAllowedUILocale = this.isAllowedUILocale_(language.code);
+      language.isProhibitedUILocale = !!language.isProhibitedUILocale;
       this.supportedLanguageMap_.set(language.code, language);
     }
 
