third_party/closure_compiler/externs/language_settings_private.js
@@ -34,7 +34,7 @@ chrome.languageSettingsPrivate.MoveType = {
  *   supportsUI: (boolean|undefined),
  *   supportsSpellcheck: (boolean|undefined),
  *   supportsTranslate: (boolean|undefined),
- *   isAllowedUILocale: (boolean|undefined)
+ *   isProhibitedUILocale: (boolean|undefined)
  * }}
  */
 chrome.languageSettingsPrivate.Language;
